--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ and open the template in the editor.-->
         </div>
        <!-- Navigation -->
 <div class="navbar">
-  <a href="index.md">Home</a>
-  <a href="sport.md">Sport</a>
-  <a href="lesson.md">Lesson</a>
-  <a href="booking.md">Booking Lesson</a>
+  <a href="index.html">Home</a>
+  <a href="sport.html">Sport</a>
+  <a href="lesson.html">Lesson</a>
+  <a href="booking.html">Booking Lesson</a>
   <a href="#" class="right">About Us</a>
 </div>
        <div class="row">
