--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ and open the template in the editor.-->
 
         <link rel="stylesheet" href="newcss.css" type="text/css"/>
 
-        <title>TODO supply a title</title>
+        <title>Sports</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
