--- a/sport.html
+++ b/sport.html
@@ -8,6 +8,17 @@
     <body>
 	   
         <div class="container">
+		 <div class="header">
+            <h1>TRAINING 4U</h1>
+        </div>
+       <!-- Navigation -->
+<div class="navbar">
+  <a href="index.html">Home</a>
+  <a href="sport.html">Sport</a>
+  <a href="lesson.html">Lesson</a>
+  <a href="booking.html">Booking Lesson</a>
+  <a href="#" class="right">About Us</a>
+</div> 
 	<table>
 		<thead>
 			<tr>
