--- a/lesson.html
+++ b/lesson.html
@@ -34,24 +34,39 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>Indoor</td>
 				<td>Zumba</td>
+				<td>8.00 a.m</td>
+				<td>10.00 a.m</td>
+				<td>RM50.00</td>
+				<td><a href="booking.xhtml">Book</a></td>
 				</tr>
 			<tr>
-				<td>Indoor</td>
 				<td>Body Pump</td>
+				<td>8.00 a.m</td>
+				<td>10.00 a.m</td>
+				<td>RM50.00</td>
+				<td><a href="booking.xhtml">Book</a></td>
 				</tr>
 			<tr>
-				<td>Outdoor</td>
 				<td>Golf</td>
+				<td>8.00 a.m</td>
+				<td>10.00 a.m</td>
+				<td>RM50.00</td>
+				<td><a href="booking.xhtml">Book</a></td>
 				</tr>
 			<tr>
-				<td>Outdoor</td>
 				<td>Tennis</td>
+				<td>8.00 a.m</td>
+				<td>10.00 a.m</td>
+				<td>RM50.00</td>
+				<td><a href="booking.xhtml">Book</a></td>
 				</tr>
 			<tr>
-				<td>Indoor and Outdoor</td>
 				<td>Yoga</td>
+				<td>8.00 a.m</td>
+				<td>10.00 a.m</td>
+				<td>RM50.00</td>
+				<td><a href="booking.xhtml">Book</a></td>
 				</tr>
 		</tbody>
 	</table>
