--- a/lesson.html
+++ b/lesson.html
@@ -26,6 +26,7 @@
 		<thead>
 			<tr>
 				<th>Sport Name</th>
+				<th>Sport Description</th>
 				<th>Start Time</th>
 				<th>End Time</th>
 				<th>Price</th>
@@ -35,6 +36,7 @@
 		<tbody>
 			<tr>
 				<td>Zumba</td>
+				<td>Zumba is a fitness program that combines Latin and international music with dance moves. Zumba routines incorporate interval training ,alternating fast and slow rhythms and to help improve cardiovascular fitness.</td>
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
@@ -42,6 +44,7 @@
 				</tr>
 			<tr>
 				<td>Body Pump</td>
+				<td>BODYPUMP is a fast-paced, barbell-based workout that's specifically designed to help you get lean, toned and fit. It uses a combination of motivating music, fantastic instructors and scientifically proven moves to help you achieve these targets more quickly than you would working out on your own.</td>
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
@@ -49,6 +52,7 @@
 				</tr>
 			<tr>
 				<td>Golf</td>
+				<td>Golf is an individual sport played by hitting a ball with a club from a tee into a hole. The object is to get the ball into the hole with the least number of swings or strokes of the club.</td>
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
@@ -56,6 +60,7 @@
 				</tr>
 			<tr>
 				<td>Tennis</td>
+				<td>Tennis is a racket sport that can be played individually against a single opponent (singles) or between two teams of two players each (doubles). Each player uses a tennis racket that is strung with cord to strike a hollow rubber ball covered with felt over or around a net and into the opponent's court.</td>
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
@@ -63,6 +68,7 @@
 				</tr>
 			<tr>
 				<td>Yoga</td>
+				<td>Yoga is a mind and body practice with a 5,000-year history in ancient Indian philosophy. Various styles of yoga combine physical postures, breathing techniques, and meditation or relaxation. </td>
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
