--- a/lesson.html
+++ b/lesson.html
@@ -40,7 +40,7 @@
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
-				<td><a href="booking.xhtml">Book</a></td>
+				<td><a href="booking.html">Book</a></td>
 				</tr>
 			<tr>
 				<td>Body Pump</td>
@@ -48,7 +48,7 @@
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
-				<td><a href="booking.xhtml">Book</a></td>
+				<td><a href="booking.html">Book</a></td>
 				</tr>
 			<tr>
 				<td>Golf</td>
@@ -56,7 +56,7 @@
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
-				<td><a href="booking.xhtml">Book</a></td>
+				<td><a href="booking.html">Book</a></td>
 				</tr>
 			<tr>
 				<td>Tennis</td>
@@ -64,7 +64,7 @@
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
-				<td><a href="booking.xhtml">Book</a></td>
+				<td><a href="booking.html">Book</a></td>
 				</tr>
 			<tr>
 				<td>Yoga</td>
@@ -72,7 +72,7 @@
 				<td>8.00 a.m</td>
 				<td>10.00 a.m</td>
 				<td>RM50.00</td>
-				<td><a href="booking.xhtml">Book</a></td>
+				<td><a href="booking.html">Book</a></td>
 				</tr>
 		</tbody>
 	</table>
