--- a/booking.html
+++ b/booking.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.-->
 <html>
     <head>
-
         <link rel="stylesheet" href="newcss.css" type="text/css"/>
-
         <title>Sports</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +21,11 @@ and open the template in the editor.-->
   <a href="booking.html">Booking Lesson</a>
   <a href="#" class="right">About Us</a>
 </div>
-
+<div class="container">
+  <div style="text-align:center">
+    <h2>Contact Us</h2>
+    <p>Swing by for a cup of coffee, or leave us a message:</p>
+  </div>
 <div class="column">
       <form action="/action_page.php">
         <label for="fname">First Name</label>
@@ -46,3 +44,4 @@ and open the template in the editor.-->
       </form>
     </div>
   </div>
+</div>
