--- a/booking.html
+++ b/booking.html
@@ -27,19 +27,20 @@
 
 <div class="column">
       <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="country">Country</label>
-        <select id="country" name="country">
-          <option value="australia">Australia</option>
-          <option value="canada">Canada</option>
-          <option value="usa">USA</option>
-        </select>
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
+        <label for="bnom"> Enter booking number:</label>
+        <input type="text" id="bnom" name="booknum" >
+        <label for="name">Enter name:</label>
+        <input type="text" id="name" name="name">
+        <label for="phone">Enter phone:</label>
+        <input type="text" id="phone" name="phone"> 
+        <label for="lesson">Lesson:</label>
+        <select id="lesson" name="lesson">
+          <option value="zumba">Zumba</option>
+          <option value="bodypump">BodyPump</option>
+          <option value="golf">Golf</option>
+          <option value="yoga">Yoga</option> 
+          <option value="tennis">Tennis</option>
+          </select>
       </form>
     </div>
   
