--- a/booking.html
+++ b/booking.html
@@ -41,6 +41,8 @@
           <option value="yoga">Yoga</option> 
           <option value="tennis">Tennis</option>
           </select>
+          <input type="submit" value="Submit">
+          <br>
       </form>
     </div>
   
