--- a/booking.html
+++ b/booking.html
@@ -22,8 +22,7 @@
   <a href="#" class="right">About Us</a>
 </div>
 
-    <h2>Contact Us</h2>
-    <p>Swing by for a cup of coffee, or leave us a message:</p>
+        <h2>Book your lesson</h2>
 
 <div class="column">
       <form action="/action_page.php">
@@ -41,7 +40,7 @@
           <option value="yoga">Yoga</option> 
           <option value="tennis">Tennis</option>
           </select>
-          <input type="submit" value="Submit">
+          <input type="book" value="Book">
           <br>
       </form>
     </div>
