--- a/booking.html
+++ b/booking.html
@@ -40,7 +40,7 @@
           <option value="yoga">Yoga</option> 
           <option value="tennis">Tennis</option>
           </select>
-          <input type="book" value="Book">
+          <input type="submit" value="Submit">
           <br>
       </form>
     </div>
