--- a/booking.html
+++ b/booking.html
@@ -40,7 +40,16 @@
           <option value="yoga">Yoga</option> 
           <option value="tennis">Tennis</option>
           </select>
-          <input type="submit" value="Submit">
+          <form action="/action_page.php" onsubmit="myFunction()">
+  Enter name: <input type="text" name="fname">
+  <input type="submit" value="Submit">
+</form>
+
+<script>
+function myFunction() {
+  alert("The form was submitted");
+}
+</script>
           <br>
       </form>
     </div>
