--- a/booking.html
+++ b/booking.html
@@ -40,8 +40,7 @@
           <option value="yoga">Yoga</option> 
           <option value="tennis">Tennis</option>
           </select>
-          <form action="/action_page.php" onsubmit="myFunction()">
-  Enter name: <input type="text" name="fname">
+          <form onsubmit="myFunction()">
   <input type="submit" value="Submit">
 </form>
 
