--- a/AboutUs.html
+++ b/AboutUs.html
@@ -74,7 +74,28 @@ html {
 </style>
 </head>
 <body>
+<link rel="stylesheet" href="newcss.css" type="text/css"/>
 
+        <title>Sports</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+    </head>
+    <body>
+          <div class="header">
+            <h1>TRAINING 4U</h1>
+            <p>Welcome to Training 4U. 
+                We are providing you sports lessons with affordable price.</p>
+        </div>
+       <!-- Navigation -->
+<div class="navbar">
+  <a href="index.html">Home</a>
+  <a href="sport.html">Sport</a>
+  <a href="lesson.html">Lesson</a>
+  <a href="booking.html">Booking Lesson</a>
+  <a href="#" class="right">About Us</a>
+</div>
+  
 <div class="about-section">
   <h1>About Us Page</h1>
   <p>Some text about who we are and what we do.</p>
