--- a/AboutUs.html
+++ b/AboutUs.html
@@ -93,7 +93,7 @@ html {
   <a href="sport.html">Sport</a>
   <a href="lesson.html">Lesson</a>
   <a href="booking.html">Booking Lesson</a>
-  <a href="#" class="right">About Us</a>
+  <a href="AboutUs.html" class="right">About Us</a>
 </div>
   
 <div class="about-section">
