--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ and open the template in the editor.-->
   <a href="sport.html">Sport</a>
   <a href="lesson.html">Lesson</a>
   <a href="booking.html">Booking Lesson</a>
-  <a href="#" class="right">About Us</a>
+  <a href="AboutUs.html" class="right">About Us</a>
 </div>
        <div class="row">
            <div class="side">
