--- a/AboutUs.html
+++ b/AboutUs.html
@@ -86,7 +86,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+      <img src="team1.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Lee Min Ho</h2>
         <p class="title">CEO & Founder</p>
