--- a/AboutUs.html
+++ b/AboutUs.html
@@ -99,7 +99,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+      <img src="team2.jpg" alt="Mike" style="width:100%">
       <div class="container">
         <h2>Viknes Rao</h2>
         <p class="title">Art Director</p>
@@ -112,7 +112,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <img src="team3.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Ana Elsa</h2>
         <p class="title">Designer</p>
