--- a/AboutUs.html
+++ b/AboutUs.html
@@ -112,7 +112,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="team3.jpg" alt="John" style="width:100%">
+      <img src="team3.JPG" alt="John" style="width:100%">
       <div class="container">
         <h2>Ana Elsa</h2>
         <p class="title">Designer</p>
