--- a/AboutUs.html
+++ b/AboutUs.html
@@ -81,6 +81,14 @@ html {
   <p>Some text about who we are and what we do.</p>
   <p>Resize the browser window to see that this page is responsive by the way.</p>
 </div>
+  <!-- Navigation -->
+<div class="navbar">
+  <a href="index.html">Home</a>
+  <a href="sport.html">Sport</a>
+  <a href="lesson.html">Lesson</a>
+  <a href="booking.html">Booking Lesson</a>
+  <a href="AboutUs.html" class="right">About Us</a>
+</div>
 
 <h2 style="text-align:center">Our Team</h2>
 <div class="row">
