--- a/AboutUs.html
+++ b/AboutUs.html
@@ -104,9 +104,7 @@ html {
 
 
 <div class="about-section">
-  <h1>About Us Page</h1>
-  <p>Some text about who we are and what we do.</p>
-  <p>Resize the browser window to see that this page is responsive by the way.</p>
+  <h1>About Us</h1>
 </div>
   <!-- Navigation -->
 <div class="navbar">
