--- a/sport.html
+++ b/sport.html
@@ -18,7 +18,7 @@
   <a href="sport.html">Sport</a>
   <a href="lesson.html">Lesson</a>
   <a href="booking.html">Booking Lesson</a>
-  <a href="#" class="right">About Us</a>
+  <a href="AboutUs.html" class="right">About Us</a>
 </div> 
 		 
 	<table>
