--- a/booking.html
+++ b/booking.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158279240-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158279240-2');
+</script>
+
+        
         <link rel="stylesheet" href="newcss.css" type="text/css"/>
         <title>Sports</title>
         <meta charset="UTF-8">
