--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.-->
 <html>
     <head>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158279240-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158279240-2');
+</script>
+
 
         <link rel="stylesheet" href="newcss.css" type="text/css"/>
 
