--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.-->
 <html>
     <head>
+        <meta name="google-site-verification" content="Tn3Kjqt_wu-cS3AwJLTT738enADco6P4CIuiGgHjwhk" />
         
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158279240-2"></script>
