--- a/product_list.html
+++ b/product_list.html
@@ -2,6 +2,18 @@
 <html lang="zxx">
 
 <head>
+ <meta name="google-site-verification" content="Tn3Kjqt_wu-cS3AwJLTT738enADco6P4CIuiGgHjwhk" />
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158279240-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158279240-2');
+</script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
