--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-   
+   <meta name="google-site-verification" content="Tn3Kjqt_wu-cS3AwJLTT738enADco6P4CIuiGgHjwhk" />
         
        <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158279240-3"></script>
