--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
- 
+ <meta name="google-site-verification" content="Tn3Kjqt_wu-cS3AwJLTT738enADco6P4CIuiGgHjwhk" />
  
         
        <!-- Global site tag (gtag.js) - Google Analytics -->
