--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 
     <!-- Required meta tags -->
    
-   <meta name="title" content="Magic">
-<meta name="description" content="You can get all beauty products with us.">
-<meta name="keywords" content="magic, lipstic, eyeshadow">
-<meta name="robots" content="noindex, nofollow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="English">
+      <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>MAGIC</title>
 
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
