--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   gtag('config', 'UA-158279240-3');
 </script>
 
-    <!-- Required meta tags -->
    
       <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MAGIC</title>
+    <meta name="description" content="You can buy great beauty products with affordable price.">
+  <meta name="keywords" content="MAGIC, beauty magic product, buy magic product">
 
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
